@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
- ~ Copyright (c) 2016 WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
- ~
- ~ Licensed under the Apache License, Version 2.0 (the "License");
- ~ you may not use this file except in compliance with the License.
- ~ You may obtain a copy of the License at
- ~
- ~      http://www.apache.org/licenses/LICENSE-2.0
- ~
- ~ Unless required by applicable law or agreed to in writing, software
- ~ distributed under the License is distributed on an "AS IS" BASIS,
- ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- ~ See the License for the specific language governing permissions and
- ~ limitations under the License.
--->
+  ~ Copyright (c) 2018 - 2023, Entgra (Pvt) Ltd. (http://www.entgra.io) All Rights Reserved.
+  ~
+  ~ Entgra (Pvt) Ltd. licenses this file to you under the Apache License,
+  ~ Version 2.0 (the "License"); you may not use this file except
+  ~ in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~    http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing,
+  ~ software distributed under the License is distributed on an
+  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+  ~ KIND, either express or implied. See the License for the
+  ~ specific language governing permissions and limitations
+  ~ under the License.
+  -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
@@ -28,13 +30,14 @@
     <artifactId>io.entgra.device.mgt.plugins.extension.siddhi.device</artifactId>
     <packaging>bundle</packaging>
     <name>WSO2 Siddhi Execution Extension - Device management Core functionality as Siddhi extension</name>
-    <url>http://wso2.org</url>
-
-    <properties>
-        <skipTests>true</skipTests>
-    </properties>
+    <url>http://entgra.io</url>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.ds-annotations</artifactId>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>io.entgra.device.mgt.core</groupId>
             <artifactId>io.entgra.device.mgt.core.device.mgt.core</artifactId>
@@ -148,8 +151,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>${wso2.maven.compiler.source}</source>
-                    <target>${wso2.maven.compiler.target}</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -165,35 +168,71 @@
                             io.entgra.device.mgt.plugins.extension.siddhi.device.*
                         </Export-Package>
                         <Import-Package>
-                            feign,
-                            feign.codec,
-                            feign.auth,
-                            feign.gson,
-                            feign.slf4j,
+<!--                            android.net.http,-->
+<!--                            android.net.ssl,-->
+<!--                            android.os,-->
+<!--                            android.security,-->
+<!--                            android.util,-->
+                            feign;version="[11.0,12)",
+                            feign.auth;version="[11.0,12)",
+                            feign.codec;version="[11.0,12)",
+                            feign.gson;version="[11.0,12)",
+                            feign.slf4j;version="[11.0,12)",
+                            io.entgra.device.mgt.core.device.mgt.common;version="[5.0,6)",
+                            io.entgra.device.mgt.core.device.mgt.common.exceptions;version="[5.0,6)",
+                            io.entgra.device.mgt.core.device.mgt.common.group.mgt;version="[5.0,6)",
+                            io.entgra.device.mgt.core.device.mgt.common.notification.mgt;version="[5.0,6)",
+                            io.entgra.device.mgt.core.device.mgt.common.operation.mgt;version="[5.0,6)",
+                            io.entgra.device.mgt.core.device.mgt.core.service;version="[5.0,6)",
+                            io.entgra.device.mgt.core.identity.jwt.client.extension;version="[5.0,6)",
+                            io.entgra.device.mgt.core.identity.jwt.client.extension.dto;version="[5.0,6)",
+                            io.entgra.device.mgt.core.identity.jwt.client.extension.exception;version="[5.0,6)",
+                            io.entgra.device.mgt.core.identity.jwt.client.extension.service;version="[5.0,6)",
+                            io.entgra.device.mgt.plugins.extension.siddhi.device.client.configs,
+                            io.entgra.device.mgt.plugins.extension.siddhi.device.client.dto,
+                            io.entgra.device.mgt.plugins.extension.siddhi.device.client.exception,
+                            javax.annotation;version="[1.0,2)",
+                            javax.crypto,javax.crypto.spec,
+                            javax.net,
                             javax.net.ssl,
-                            javax.xml,
-                            javax.xml.bind,
-                            javax.xml.bind.annotation,
-                            javax.xml.parsers;resolution:=optional,
-                            org.apache.commons.lang,
+                            javax.security.auth.x500,javax.xml.bind;version="[0.0,1)",
+                            javax.xml.bind.annotation;version="[0.0,1)",
+                            javax.xml.parsers,
+<!--                            kotlin;resolution:=optional,-->
+<!--                            kotlin.*;resolution:=optional,-->
+<!--                            kotlin,-->
+<!--                            kotlin.annotation,-->
+<!--                            kotlin.collections,-->
+<!--                            kotlin.comparisons,-->
+<!--                            kotlin.io,-->
+<!--                            kotlin.jvm,-->
+<!--                            kotlin.jvm.functions,-->
+<!--                            kotlin.jvm.internal,-->
+<!--                            kotlin.jvm.internal.markers,-->
+<!--                            kotlin.ranges,-->
+<!--                            kotlin.reflect,-->
+<!--                            kotlin.sequences,-->
+<!--                            kotlin.text,-->
+                            org.apache.commons.lang;version="[2.6,3)",
+                            org.apache.commons.logging;version="[1.2,2)",
+<!--                            org.bouncycastle.jsse;version="[1.70,2)",-->
+<!--                            org.bouncycastle.jsse.provider;version="[1.70,2)",-->
+<!--                            org.conscrypt,-->
+                            org.json;version="[3.0,4)",
+<!--                            org.openjsse.javax.net.ssl,-->
+<!--                            org.openjsse.net.ssl,-->
                             org.w3c.dom,
-                            org.wso2.carbon.base,
-                            org.wso2.carbon.utils,
-                            org.wso2.carbon.user.api,
-                            org.json;version="${orbit.version.json.range}",
-                            org.wso2.siddhi.core.*,
-                            org.wso2.siddhi.query.api.*,
-                            io.entgra.device.mgt.core.device.mgt.core.*,
-                            io.entgra.device.mgt.core.device.mgt.common.*,
-                            io.entgra.device.mgt.core.identity.jwt.client.*,
-                            org.apache.commons.logging,
-                            org.wso2.carbon.context,
-                            android.util;resolution:=optional,
-                            javax.annotation;resolution:=optional,
-                            javax.net;resolution:=optional,
-                            javax.security.auth.x500;resolution:=optional,
-                            javax.crypto;resolution:=optional,
-                            javax.crypto.spec;resolution:=optional
+                            org.wso2.carbon.base;version="[1.0,2)",
+                            org.wso2.carbon.context;version="[4.8,5)",
+                            org.wso2.carbon.user.api;version="[1.0,2)",
+                            org.wso2.carbon.utils;version="[4.8,5)",
+                            org.wso2.siddhi.core.config;version="[3.2,4)",
+                            org.wso2.siddhi.core.exception;version="[3.2,4)",
+                            org.wso2.siddhi.core.executor;version="[3.2,4)",
+                            org.wso2.siddhi.core.executor.function;version="[3.2,4)",
+                            org.wso2.siddhi.core.query.processor.stream.function;version="[3.2,4)",
+                            org.wso2.siddhi.query.api.definition;version="[3.2,4)",
+                            org.wso2.siddhi.query.api.exception;version="[3.2,4)"
                         </Import-Package>
                         <Embed-Dependency>
                             jsr311-api,
@@ -209,12 +248,19 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <argLine>
+                        --add-opens=java.xml/jdk.xml.internal=ALL-UNNAMED
+                        --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED
+                    </argLine>
                     <systemPropertyVariables>
                         <log4j.configuration>file:src/test/resources/log4j.properties</log4j.configuration>
                     </systemPropertyVariables>
                     <suiteXmlFiles>
                         <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
+                    <classpathDependencyExcludes>
+                        <classpathDependencyExclude>org.ops4j.pax.logging</classpathDependencyExclude>
+                    </classpathDependencyExcludes>
                 </configuration>
             </plugin>
             <plugin>
